<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/golden"
            android:fontFamily="@font/quicksand_medium"
            android:padding="16dp"
            android:text="@string/title_q_1"
            android:textAlignment="center"
            android:textColor="@color/text_black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_medium"
            android:padding="16dp"
            android:text="@string/q_1"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/song_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/brown"
            android:onClick="playSongThanks"
            android:padding="16dp"
            android:text="@string/q_1_button"
            android:textColor="@color/golden" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_medium"
            android:padding="0dp"
            android:text="@string/q_1_button_info"
            android:textAlignment="center"
            android:textSize="15sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <RadioButton
                android:id="@+id/volbeat_rb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/q_1_choice_1" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/q_1_choice_2" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/q_1_choice_3" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/golden"
            android:fontFamily="@font/quicksand_medium"
            android:padding="16dp"
            android:text="@string/title_q_2"
            android:textAlignment="center"
            android:textColor="@color/text_black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_medium"
            android:padding="16dp"
            android:text="@string/q_2"
            android:textAlignment="center"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:src="@mipmap/tenaciousdblur"
                android:contentDescription="@string/q_2_image_description" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/q_2_choice_1" />

                <RadioButton
                    android:id="@+id/tenacious_rb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/q_2_choice_2" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/q_2_choice_3" />
            </RadioGroup>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/golden"
            android:fontFamily="@font/quicksand_medium"
            android:padding="16dp"
            android:text="@string/title_q_3"
            android:textAlignment="center"
            android:textColor="@color/text_black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_medium"
            android:padding="16dp"
            android:text="@string/q_3"
            android:textAlignment="center"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:src="@mipmap/ukulele"
                android:contentDescription="@string/q_3_image_description" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="32dp">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/q_3_choice_1" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/q_3_choice_2" />

                <RadioButton
                    android:id="@+id/ukulele_rb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/q_3_choice_3" />
            </RadioGroup>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/golden"
            android:fontFamily="@font/quicksand_medium"
            android:padding="16dp"
            android:text="@string/title_q_4"
            android:textAlignment="center"
            android:textColor="@color/text_black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_medium"
            android:padding="16dp"
            android:text="@string/q_4"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/brown"
            android:onClick="playNote"
            android:padding="16dp"
            android:text="@string/q_4_button"
            android:textColor="@color/golden" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/q_4_choice_1" />

            <RadioButton
                android:id="@+id/sol_note_rb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/q_4_choice_2" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/q_4_choice_3" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/golden"
            android:fontFamily="@font/quicksand_medium"
            android:padding="16dp"
            android:text="@string/title_q_5"
            android:textAlignment="center"
            android:textColor="@color/text_black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/q_5"
            android:textAlignment="center"
            android:textSize="20sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <RadioButton
                android:id="@+id/date_one_rb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/q_5_choice_1" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/q_5_choice_2" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/q_5_choice_3" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/golden"
            android:fontFamily="@font/quicksand_medium"
            android:padding="16dp"
            android:text="@string/title_q_6"
            android:textAlignment="center"
            android:textColor="@color/text_black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/q_6"
            android:textAlignment="center"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

        <CheckBox android:id="@+id/checkbox_choice_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/q_6_choice_1" />

        <CheckBox android:id="@+id/checkbox_choice_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/q_6_choice_2"
            android:paddingStart="8dp" />

        <CheckBox android:id="@+id/checkbox_choice_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/q_6_choice_3" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/golden"
            android:fontFamily="@font/quicksand_medium"
            android:padding="16dp"
            android:text="@string/title_q_7"
            android:textAlignment="center"
            android:textColor="@color/text_black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/q_7"
            android:textAlignment="center"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">

        <EditText
            android:id="@+id/question_seven_edit_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/q_7_edit_field_hint"
            android:paddingTop="0dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"/>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/brown"
            android:onClick="toResultsActivity"
            android:padding="16dp"
            android:text="@string/complete_quiz_button"
            android:textColor="@color/golden" />

    </LinearLayout>
</ScrollView>