<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tomas.musicquiz.ResultsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="20dp"
            android:background="@color/golden"
            android:fontFamily="@font/quicksand_medium"
            android:padding="16dp"
            android:text="@string/result_title"
            android:textAlignment="center"
            android:textColor="@color/brown"
            android:textSize="40sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:padding="16dp"
            android:src="@mipmap/accept_two"
            android:contentDescription="@string/result_image_description" />

        <TextView
            android:id="@+id/result_answer_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/quicksand_medium"
            android:padding="16dp"
            android:text="@string/error_text"
            android:textAlignment="center"
            android:textSize="30sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/brown"
            android:onClick="shareButton"
            android:padding="16dp"
            android:text="@string/share_button"
            android:textColor="@color/golden" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/brown"
            android:onClick="toBeginning"
            android:padding="16dp"
            android:text="@string/try_again_button"
            android:textColor="@color/golden" />

    </LinearLayout>
</ScrollView>