<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tomas.musicquiz.WelcomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="30dp"
            android:background="@color/golden"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/welcome_title"
            android:textAlignment="center"
            android:textColor="@color/text_black"
            android:textSize="40sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/quicksand_medium"
            android:padding="16dp"
            android:text="@string/welcome_info"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="@color/golden"
            android:fontFamily="@font/quicksand_medium"
            android:padding="16dp"
            android:text="@string/quiz_start_cheer"
            android:textAlignment="center"
            android:textColor="@color/text_black"
            android:textSize="30sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/brown"
            android:fontFamily="@font/quicksand_medium"
            android:onClick="toMainQuiz"
            android:padding="16dp"
            android:text="@string/quiz_start_button"
            android:textColor="@color/golden" />

    </LinearLayout>
</ScrollView>